main menu click issues fixed on mobile devices

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,4 +58,8 @@
   .about_details ul {
     grid-template-columns: 1fr;
   }
+  .main_menu_area nav a {
+    display: flex;
+    align-items: center;
+  }
 }
